<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProjetoAulaN</string>
    <string name="txtCalculadoraDeGorjeta">Calculadora de Gorjeta</string>
    <string name="txtValor">valor:</string>
    <string name="txtGorjeta">gorjeta:</string>
    <string name="txtTotal">total:</string>
    <string name="txtDesenho">Desenho</string>
    <string name="txtSensores">Sensores</string>
    <string name="txtTesteSensores">Teste Sensores</string>
    <string name="txtTesteBD">Teste Banco de Dados</string>
    <string name="txtRe">RE</string>
    <string name="txtNome">nome</string>
    <string name="txtDataAdm">Data de Admissão</string>
    <string name="txtSalario">Salário</string>
    <string name="txtFuncao">Função</string>
    <string name="txtCadastrar">Cadastrar</string>
    <string name="txtExcluir">Excluir</string>
    <string name="txtAlterar">Alterar</string>
    <string name="txtBuscar">Buscar</string>
    <string name="txtListar">Listar</string>
    <string name="txtTesteTCP">Teste TCP</string>

</resources>